@@ -45,6 +45,18 @@ public class ClustersProperties {
 
   AdminClient adminClient = new AdminClient();
 
+  Csv csv = new Csv();
+
+  Boolean messageRelativeTimestamp;
+
+  @Data
+  public static class Csv {
+    String lineDelimeter = "crlf";
+    char quoteCharacter = '"';
+    String quoteStrategy = "required";
+    char fieldSeparator = ',';
+  }
+
   @Data
   public static class AdminClient {
     Integer timeout;
@@ -68,6 +80,7 @@ public class ClustersProperties {
     String schemaRegistry;
     SchemaRegistryAuth schemaRegistryAuth;
     KeystoreConfig schemaRegistrySsl;
+    String schemaRegistryTopicSubjectSuffix = "-value";
 
     String ksqldbServer;
     KsqldbServerAuth ksqldbServerAuth;
@@ -145,6 +158,7 @@ public class ClustersProperties {
     String password;
     String keystoreLocation;
     String keystorePassword;
+    String consumerNamePattern = "connect-%s";
   }
 
   @Data
@@ -152,6 +166,20 @@ public class ClustersProperties {
   public static class SchemaRegistryAuth {
     String username;
     String password;
+    OauthConfig oauth;
+  }
+
+  @Data
+  @ToString(exclude = {"clientSecret"})
+  public static class OauthConfig {
+    String tokenUrl;
+    String clientId;
+    String clientSecret;
+    String[] scopes;
+
+    Boolean tokenCacheEnabled = true;
+    Duration tokenRefreshBuffer = Duration.ofSeconds(60);
+    Integer maxRetries = 1;  // Max retries on 401 errors
   }
 
   @Data
@@ -159,7 +187,7 @@ public class ClustersProperties {
   public static class TruststoreConfig {
     String truststoreLocation;
     String truststorePassword;
-    boolean verifySsl = true;
+    boolean verify = true;
   }
 
   @Data
@@ -215,6 +243,7 @@ public class ClustersProperties {
     Boolean consoleAuditEnabled;
     LogLevel level = LogLevel.ALTER_ONLY;
     Map<String, String> auditTopicProperties;
+    Boolean requireAuditTopic;
 
     public enum LogLevel {
       ALL,
@@ -227,7 +256,6 @@ public class ClustersProperties {
   @AllArgsConstructor
   public static class CacheProperties {
     boolean enabled = true;
-    Duration connectCacheExpiry = Duration.ofMinutes(1);
     Duration connectClusterCacheExpiry = Duration.ofHours(24);
   }
 
@@ -237,17 +265,30 @@ public class ClustersProperties {
   public static class NgramProperties {
     int ngramMin = 1;
     int ngramMax = 4;
+    boolean distanceScore = true;
   }
 
   @Data
   @NoArgsConstructor
   @AllArgsConstructor
   public static class ClusterFtsProperties {
-    boolean enabled = false;
-    NgramProperties schemas = new NgramProperties(1, 4);
-    NgramProperties consumers = new NgramProperties(1, 4);
-    NgramProperties connect = new NgramProperties(1, 4);
-    NgramProperties acl = new NgramProperties(1, 4);
+    boolean enabled = true;
+    boolean defaultEnabled = false;
+    NgramProperties schemas = new NgramProperties(1, 4, true);
+    NgramProperties consumers = new NgramProperties(1, 4, true);
+    NgramProperties connect = new NgramProperties(1, 4, true);
+    NgramProperties acl = new NgramProperties(1, 4, true);
+
+    public boolean use(Boolean request) {
+      if (enabled) {
+        if (Boolean.TRUE.equals(request)) {
+          return true;
+        } else {
+          return request == null && defaultEnabled;
+        }
+      }
+      return false;
+    }
   }
 
   @PostConstruct
@@ -275,7 +316,6 @@ public class ClustersProperties {
     }
   }
 
-  @SuppressWarnings("unchecked")
   private Map<String, Object> flattenClusterProperties(@Nullable String prefix,
                                                        @Nullable Map<String, Object> propertiesMap) {
     Map<String, Object> flattened = new HashMap<>();
@@ -294,8 +334,8 @@ public class ClustersProperties {
 
   private void validateClusterNames() {
     // if only one cluster provided it is ok not to set name
-    if (clusters.size() == 1 && !StringUtils.hasText(clusters.get(0).getName())) {
-      clusters.get(0).setName("Default");
+    if (clusters.size() == 1 && !StringUtils.hasText(clusters.getFirst().getName())) {
+      clusters.getFirst().setName("Default");
       return;
     }
 
@@ -303,12 +343,11 @@ public class ClustersProperties {
     for (Cluster clusterProperties : clusters) {
       if (!StringUtils.hasText(clusterProperties.getName())) {
         throw new IllegalStateException(
-            "Application config isn't valid. "
-                + "Cluster names should be provided in case of multiple clusters present");
+          "Application config isn't valid. " + "Cluster names should be provided in case of multiple clusters present"
+        );
       }
       if (!clusterNames.add(clusterProperties.getName())) {
-        throw new IllegalStateException(
-            "Application config isn't valid. Two clusters can't have the same name");
+        throw new IllegalStateException("Application config isn't valid. Two clusters can't have the same name");
       }
     }
   }
